@@ -1,3 +1,9 @@
+2003-11-19  Mark Kettenis  <kettenis@gnu.org>
+
+	* frame.c (get_prev_frame): Use result from
+	get_frame_address_in_block instead of get_frame_pc as argument to
+	inside_main_func.  Fixes PR backtrace/1435.
+
 2003-11-19  Andrew Cagney  <cagney@redhat.com>
 
 	* stack.c (return_command): Handle "void", "legacy" and "unknown
